force-app/main/default/objects/Lead/fields/Investor_Channel__c.field-meta.xml
<CustomField>
    <fullName>Investor_Channel__c</fullName>
    <description>Acquisition channel through which this prospective investor lead entered the onboarding pipeline.</description>
    <inlineHelpText>Select how this investor lead was sourced (web form, email, or referral).</inlineHelpText>
    <label>Investor Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web-to-Lead</fullName>
            </value>
            <value>
                <fullName>Email-to-Lead</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>