force-app/main/default/objects/Lead/fields/Onboarding_KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_KYC_Status__c</fullName>
    <description>Stage of the investor lead within the onboarding and KYC intake process.</description>
    <inlineHelpText>Track the lead&apos;s onboarding progress through document collection, accreditation, and verification.</inlineHelpText>
    <label>Onboarding KYC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Docs</fullName>
            </value>
            <value>
                <fullName>Accreditation Pending</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>