force-app/main/default/objects/Lead/fields/Portal_Invite_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Invite_Status__c</fullName>
    <description>Whether the investor portal invitation has been sent to this onboarding lead.</description>
    <inlineHelpText>Pending until the portal invite is sent; set to Invited once the invitation has gone out.</inlineHelpText>
    <label>Portal Invite Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>